--- a/app/src/main/res/drawable/square_sold_out.xml
+++ b/app/src/main/res/drawable/square_sold_out.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid
+        android:color="@color/gray"/>
+    <size
+        android:width="60dp"
+        android:height="20dp"/>
+    <corners android:radius="5dp"/>
 
-</selector>
+</shape>
