--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,11 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         app:itemBackground="@color/white"
-        app:itemIconTint="@drawable/item_color"
-        app:itemTextColor="@drawable/item_color"
-        app:labelVisibilityMode="labeled"
+        app:itemIconTint="@drawable/item_bottom_nav_color"
+        app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
+        app:itemTextAppearanceInactive="@style/BottomNavigationView"
+        app:itemTextColor="@drawable/item_bottom_nav_color"
+        app:labelVisibilityMode="auto"
         app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
