--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -1,6 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:contentPaddingBottom="1dp"
+    app:cardBackgroundColor="@color/lighter_gray"
+    app:cardElevation="@dimen/cardview_compat_inset_shadow">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp">
+
+        <ImageView
+            android:id="@+id/article_iv"
+            android:layout_width="85sp"
+            android:layout_height="85sp"
+            android:layout_marginStart="3sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/sample_img" />
+
+        <TextView
+            android:id="@+id/article_title_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingRight="10dp"
+            android:text="에어팟 프로팝니다"
+            android:textColor="@color/black"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/article_iv"
+            app:layout_constraintTop_toTopOf="@id/article_iv" />
+
+        <TextView
+            android:id="@+id/article_date_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="1dp"
+            android:text="4월 22일 오후 02:00"
+            android:textSize="9sp"
+            app:layout_constraintStart_toEndOf="@id/article_iv"
+            app:layout_constraintTop_toBottomOf="@id/article_title_tv" />
+
+        <TextView
+            android:id="@+id/article_price_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="4dp"
+            android:text="220,000원"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@id/article_iv"
+            app:layout_constraintTop_toBottomOf="@id/article_date_tv" />
+
+        <TextView
+            android:id="@+id/article_status_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/square_sold_out"
+            android:gravity="center"
+            android:text="판매완료"
+            android:textColor="@color/white"
+            android:textSize="8sp"
+            app:layout_constraintStart_toEndOf="@id/article_iv"
+            app:layout_constraintTop_toBottomOf="@id/article_price_tv" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.cardview.widget.CardView>
