--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
 
     <color name="main_blue">#0048FF</color>
     <color name="dark_gray">#313132</color>
+    <color name="gray">#555555</color>
+    <color name="light_gray">#C6C6C6</color>
+    <color name="lighter_gray">#DCDCDC</color>
 
 
 </resources>
