--- a/app/src/main/res/drawable/square_sold_out.xml
+++ b/app/src/main/res/drawable/square_sold_out.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/gray"/>
+        android:color="@color/light_gray"/>
     <size
-        android:width="60dp"
-        android:height="20dp"/>
+        android:width="45sp"
+        android:height="15sp"/>
     <corners android:radius="5dp"/>
 
 </shape>
