--- a/app/src/main/res/drawable/square_sold.xml
+++ b/app/src/main/res/drawable/square_sold.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/light_gray"/>
+        android:color="@color/sold_blue"/>
     <size
         android:width="44sp"
         android:height="14sp"/>
