--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,21 +9,49 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-   
+    <GridLayout
+        android:id="@+id/categoryGridView"
+        android:layout_width="match_parent"
+        android:layout_height="120sp"
+        android:background="@color/main_blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/search_ibtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/main_blue"
+        android:src="@drawable/ic_search_24"
+        android:layout_marginEnd="12sp"
+        android:layout_marginTop="8sp"
+        app:layout_constraintEnd_toStartOf="@id/notification_ibtn"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/notification_ibtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/main_blue"
+        android:src="@drawable/ic_notifications_24"
+        android:layout_marginEnd="16sp"
+        android:layout_marginTop="8sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/recent_article_list_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:fontFamily="@font/one_mobile_regular"
         android:paddingLeft="16sp"
-        android:paddingTop="10dp"
+        android:paddingTop="8dp"
         android:paddingRight="16sp"
-        android:paddingBottom="10dp"
+        android:paddingBottom="8dp"
         android:text="@string/recent_article_list_title"
-        android:textSize="12sp"
-        android:textStyle="bold"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categoryGridView" />
