--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -13,7 +13,8 @@
     <color name="dark_gray">#313132</color>
     <color name="gray">#555555</color>
     <color name="light_gray">#9C9C9C</color>
-    <color name="lighter_gray">#DCDCDC</color>
+    <color name="lighter_gray">#EAE9E9</color>
+    <color name="lighter_grayer" tools:ignore="MissingDefaultResource">#EAE9E9</color>
 
 
 </resources>
