--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -14,15 +14,28 @@
         android:paddingTop="16dp"
         android:paddingBottom="16dp">
 
-        <ImageView
-            android:id="@+id/product_iv"
-            android:layout_width="85sp"
-            android:layout_height="85sp"
-            android:layout_marginStart="3sp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/product_iv_cv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/sample_img" />
+            app:cardBackgroundColor="@color/white"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="6sp"
+            android:layout_marginStart="3sp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/product_iv"
+                android:layout_width="85sp"
+                android:layout_height="85sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/sample_img" />
+        </androidx.cardview.widget.CardView>
+
 
         <TextView
             android:id="@+id/product_title_tv"
@@ -37,8 +50,8 @@
             android:textColor="@color/black"
             android:textSize="13sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/product_iv"
-            app:layout_constraintTop_toTopOf="@id/product_iv" />
+            app:layout_constraintStart_toEndOf="@id/product_iv_cv"
+            app:layout_constraintTop_toTopOf="@id/product_iv_cv" />
 
         <TextView
             android:id="@+id/product_date_tv"
@@ -48,7 +61,7 @@
             android:layout_marginTop="1dp"
             android:text="4월 22일 오후 02:00"
             android:textSize="8sp"
-            app:layout_constraintStart_toEndOf="@id/product_iv"
+            app:layout_constraintStart_toEndOf="@id/product_iv_cv"
             app:layout_constraintTop_toBottomOf="@id/product_title_tv" />
 
         <TextView
@@ -60,7 +73,7 @@
             android:text="220,000원"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@id/product_iv"
+            app:layout_constraintStart_toEndOf="@id/product_iv_cv"
             app:layout_constraintTop_toBottomOf="@id/product_date_tv" />
 
         <TextView
@@ -74,7 +87,7 @@
             android:text="판매완료"
             android:textColor="@color/white"
             android:textSize="8sp"
-            app:layout_constraintStart_toEndOf="@id/product_iv"
+            app:layout_constraintStart_toEndOf="@id/product_iv_cv"
             app:layout_constraintTop_toBottomOf="@id/product_price_tv" />
 
 
